Fix compile errors (java8)
Signed-off-by: Harry Middelburg <harry.middelburg@alliander.com>